# gize

./: .gitignore  CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  SECURITY.md  STABILITY.md  cspell.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  rc_validation.md
.github/workflows/: ci.yml  release.yml
ADR/: adr-000-process.md  adr-001-workspace.md  adr-002-axum.md  adr-003-data-layer.md  adr-004-templates.md  adr-005-module-layout.md  adr-006-admin.md  adr-007-macros.md  adr-008-plugins.md  adr-009-configuration.md  adr-010-openapi.md  adr-011-migrations.md  adr-012-cli.md  adr-013-auth.md  adr-014-relationships.md  adr-015-second-database.md  adr-016-api-versioning.md  adr-017-createadmin.md  adr-018-websocket.md  adr-019-serve-admin.md  adr-020-format-generated-code.md  adr-021-authorization.md
crates/gize/: Cargo.toml  README.md
crates/gize-admin/: Cargo.toml  README.md
crates/gize-admin/src/: lib.rs
crates/gize-admin/src/assets/: styles.css
crates/gize-auth/: Cargo.toml  README.md
crates/gize-auth/src/: lib.rs
crates/gize-cli/: Cargo.toml
crates/gize-cli/src/: commands.rs  main.rs
crates/gize-core/: Cargo.toml  README.md
crates/gize-core/src/: dialect.rs  field.rs  lib.rs  manifest.rs  naming.rs
crates/gize-db/: Cargo.toml  README.md
crates/gize-db/src/: admin.rs  lib.rs  migrate.rs
crates/gize-generator/: Cargo.toml  README.md
crates/gize-generator/benches/: generation.rs
crates/gize-generator/src/: diff.rs  lib.rs  plan.rs  plugin.rs  registry.rs  scaffold.rs  sync.rs  writer.rs
crates/gize-generator/tests/: generation.rs
crates/gize-generator/tests/snapshots/: auth__src_app_users_dto_rs.snap  auth__src_app_users_error_rs.snap  auth__src_app_users_handler_rs.snap  auth__src_app_users_routes_rs.snap  auth__src_auth_mod_rs.snap  crud__create_products_sql.snap  crud__dto_rs.snap  crud__error_rs.snap  crud__handler_rs.snap  crud__mod_rs.snap  crud__model_rs.snap  crud__repository_rs.snap  crud__routes_rs.snap  crud__service_rs.snap  crud__tests_rs.snap  project__Cargo_toml.snap  project__gize_toml.snap  project__src_app_mod_rs.snap  project__src_main_rs.snap  project__src_state_rs.snap
crates/gize-macros/: Cargo.toml  README.md
crates/gize-macros/src/: lib.rs
crates/gize-openapi/: Cargo.toml  README.md
crates/gize-openapi/src/: lib.rs
crates/gize-templates/: Cargo.toml  README.md
crates/gize-templates/src/: auth.rs  crud.rs  lib.rs  model.rs  module.rs  openapi.rs  project.rs  user.rs  ws.rs
crates/gize-testing/: Cargo.toml  README.md
crates/gize-testing/src/: lib.rs
crates/gize/src/: cli.rs  commands.rs  main.rs  password.rs
docs/: architecture.md  cookbook.md  faq.md  getting-started.md  mvp.md  roadmap.md  validation.md  vision.md
examples/gize-chat/: .env.example  Cargo.toml  README.md  gize.toml
examples/gize-chat/admin/: .env.example  index.html  package.json  vite.config.ts
examples/gize-chat/admin/src/: App.tsx  Resource.tsx  ResourceForm.tsx  api.ts  auth.tsx  icons.tsx  resources.ts  theme.ts  toast.tsx
examples/gize-chat/migrations/: 01783445513892407000_create_users.sql  01783445513904477000_create_messages.sql
examples/gize-chat/src/: main.rs  router.rs  state.rs
examples/gize-chat/src/app/: mod.rs
examples/gize-chat/src/app/messages/: dto.rs  error.rs  handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs  tests.rs
examples/gize-chat/src/app/users/: dto.rs  error.rs  handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs  tests.rs
examples/gize-chat/src/app/ws/: client.html  handler.rs  message.rs  mod.rs  routes.rs
examples/gize-chat/src/auth/: mod.rs
examples/gize-chat/src/config/: mod.rs
examples/gize-healthcheck/: Cargo.toml
examples/gize-healthcheck/src/: main.rs
