[workspace]
resolver = "3"
members = ["crates/*", "examples/gize-healthcheck"]
# `gize-chat` is a full *generated* app example: it keeps the standalone Cargo.toml `gize new`
# produces (its own deps, not workspace-inherited), so it is excluded from the workspace and
# built on its own.
exclude = ["examples/gize-chat"]

[workspace.package]
version = "0.8.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/robertolima-dev/gize"
rust-version = "1.85"

[workspace.dependencies]
gize-core = { path = "crates/gize-core", version = "0.8.2" }
gize-generator = { path = "crates/gize-generator", version = "0.8.2" }
gize-templates = { path = "crates/gize-templates", version = "0.8.2" }
gize-db = { path = "crates/gize-db", version = "0.8.2" }
gize-macros = { path = "crates/gize-macros", version = "0.8.2" }
gize-openapi = { path = "crates/gize-openapi", version = "0.8.2" }
gize-admin = { path = "crates/gize-admin", version = "0.8.2" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "mysql", "any", "migrate"] }
tokio = { version = "1", features = ["full"] }
argon2 = { version = "0.5", features = ["std"] }
rpassword = "7"
