[package]
name = "gize-healthcheck"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Example external Gize plugin: generates a /health route (ADR-008, plugin API v0)."
publish = false

[[bin]]
name = "gize-healthcheck"
path = "src/main.rs"

[dependencies]
gize-generator.workspace = true
anyhow.workspace = true
